@@ -66,6 +66,9 @@ sub new_default {
   # Optimize
   $bconf->set_optimize('-O3');
   
+  # Extension
+  $bconf->set_ext('c');
+  
   # I want to print warnings, but if gcc version is different, can't suppress no needed warning message.
   # so I dicide not to print warning in release version
   if ($ENV{SPVM_TEST_ENABLE_WARNINGS}) {
@@ -101,6 +104,9 @@ sub new_cpp {
   
   # LD
   $bconf->set_ld('g++');
+  
+  # Extension
+  $bconf->set_ext('cpp');
   
   # Delete std
   $bconf->delete_std;
